--- a/src/static/index.html
+++ b/src/static/index.html
@@ -137,7 +137,8 @@
         <div class="site">
             订单编号：{{.TradeId}}
         </div>
-        <p class="red-text" style="font-size: large;">公益提示：傻逼 TRC20 转账费用屡次涨价，强烈推荐改用 Polygon 网络!</p>
+        <p class="red-text" style="font-size: large;color: white;background-color: indianred;">公益提示：<br>傻逼 TRC20
+            转账费用屡次涨价，现在已是最贵的 USDT 网络！<br>强烈推荐改用低手续费的 Polygon 网络!</p>
         <div class="red-text">！!到账金额需要与下方显示的金额一致，否则系統无法确认！！</div>
         <div class="red-text">尝试点击钱包地址或金额可直接复制👇</div>
         <div class="qr-code-container">
